# parc-electrique

./: .gitignore  README.md  data.py  package-lock.json  pyproject.toml
app/: .env.local  .env.production  .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
app/src/: Sidebar.tsx  app.tsx  elements.ts  main.ts  map.ts  style.css
app/src/elements/: panel-trigger.ts
app/src/map-styles/: energy-layers.ts  layer-hydro.ts  layer-ign.json  layer-nuclear.ts  style.json  style.ts
data/: README.md  consolidated.py  edf.py  osm.py
data/map/: mapping.yml
data/osm/: mapping.yml
data/regions/: post-import.sql
map/: Dockerfile  fly.toml  functions.sql  tegola.toml
web/: .dockerignore  Dockerfile  fly.toml  manage.py  pyproject.toml
web/parc_elec/: asgi.py  middlewares.py  odre.py  rte.py  settings.py  urls.py  wikidata.py  wsgi.py
web/power_plants/: admin.py  apps.py  models.py  urls.py  views.py
web/power_plants/migrations/: 0001_initial.py  0002_powercapacity.py  0003_powerproduction.py  0004_powerproduction_name.py  0005_powermix.py  0006_region_alter_powerplant_options_powermix_insee_code.py  0007_plantregion.py  0008_planteic_alter_powerplant_table.py
web/power_plants/models/: __init__.py  capacity.py  mix.py  plant.py  plant_eic.py  plant_region.py  production.py  region.py
web/power_plants/templates/power_plants/: about.html  about.page.html  base.html  index.html  index.page.html  plant.html  plant.page.html  region.html  region.page.html
web/power_plants/templates/power_plants/components/: close_panel_button.html
