[tool.poetry]
name = "parc-elec-fr"
version = "0.1.0"
description = ""
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
readme = "README.md"
packages = [{include = "parc_elec_fr"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
