[tool.poetry]
name = "parc-elec-fr"
version = "0.1.0"
description = ""
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
readme = "../README.md"
packages = [{include = "parc_elec_fr"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.0"
django = "^4.2.5"
ipython = "^8.15.0"
whitenoise = "^6.6.0"
django-vite = "^3.0.3"
gunicorn="*"
sentry-sdk = {extras = ["django"], version = "^2.7.1"}
psycopg = {extras = ["binary"], version = "^3.2.1"}
sparqlwrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
django-debug-toolbar = "^4.4.5"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
